[gd_scene load_steps=16 format=4 uid="uid://wqnpfwb82oxn"]

[ext_resource type="Script" path="res://Universal Scripts/level.gd" id="1_w083l"]
[ext_resource type="PackedScene" uid="uid://c14nbho10g8mm" path="res://TileMaps/over_world_map_tiles.tscn" id="2_t2xxp"]
[ext_resource type="PackedScene" uid="uid://cqtftu4m687ui" path="res://Universal Scripts/level_transition.tscn" id="3_hbmht"]
[ext_resource type="FontFile" uid="uid://birn6e5nqa478" path="res://Player/GUI/fonts/m5x7.ttf" id="4_nntlh"]
[ext_resource type="PackedScene" uid="uid://ctsnowjve7avk" path="res://Player/player_spawn.tscn" id="5_k707q"]
[ext_resource type="Script" path="res://Overworld/Choice.gd" id="8_advpt"]
[ext_resource type="Resource" uid="uid://6mo6hhvcdohj" path="res://Items/red_potion.tres" id="10_5c3fk"]
[ext_resource type="PackedScene" uid="uid://dm6pykt80dbur" path="res://Items/item_dropper.tscn" id="10_p2hh2"]
[ext_resource type="Resource" uid="uid://mq2bph2hid1y" path="res://Items/heart_container.tres" id="12_2et6f"]
[ext_resource type="Script" path="res://Universal Scripts/persistant_handler.gd" id="12_v6iyk"]
[ext_resource type="PackedScene" uid="uid://c0tgajcndy5fi" path="res://NPCs/old_man.tscn" id="13_a4tep"]
[ext_resource type="PackedScene" uid="uid://hbv6tv21efd" path="res://NPCs/fire.tscn" id="14_ctylk"]

[sub_resource type="Animation" id="Animation_cedfc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_ve2go"]
resource_name = "Show Text"
length = 10.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, -0.5),
"update": 0,
"values": [0, 100]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6cp2"]
_data = {
"RESET": SubResource("Animation_cedfc"),
"Show Text": SubResource("Animation_ve2go")
}

[node name="Cave-SwordB" type="Node2D" node_paths=PackedStringArray("dungeon_camera")]
script = ExtResource("1_w083l")
dungeon_camera = NodePath("Camera2D")

[node name="OverWorldMapTiles" parent="." instance=ExtResource("2_t2xxp")]
tile_map_data = PackedByteArray("AAAAAAAAAAAeAAYAAAABAAAAAAAeAAYAAAACAAAAAAAeAAYAAAADAAAAAAAeAAYAAAAEAAAAAAAeAAYAAAAFAAAAAAAeAAYAAAAGAAAAAAAeAAYAAAAHAAAAAAAeAAYAAAAIAAAAAAAeAAYAAAAJAAAAAAAeAAYAAAAKAAAAAAAeAAYAAAALAAAAAAAeAAYAAAAMAAAAAAAeAAYAAAANAAAAAAAeAAYAAAAOAAAAAAAeAAYAAAAPAAAAAAAeAAYAAAAAAAEAAAAeAAYAAAABAAEAAAAeAAYAAAACAAEAAAAeAAYAAAADAAEAAAAeAAYAAAAEAAEAAAAeAAYAAAAFAAEAAAAeAAYAAAAGAAEAAAAeAAYAAAAHAAEAAAAeAAYAAAAIAAEAAAAeAAYAAAAJAAEAAAAeAAYAAAAKAAEAAAAeAAYAAAALAAEAAAAeAAYAAAAMAAEAAAAeAAYAAAANAAEAAAAeAAYAAAAOAAEAAAAeAAYAAAAPAAEAAAAeAAYAAAAAAAIAAAAeAAYAAAAAAAMAAAAeAAYAAAAAAAQAAAAeAAYAAAAAAAUAAAAeAAYAAAAAAAYAAAAeAAYAAAAAAAcAAAAeAAYAAAAAAAgAAAAeAAYAAAAPAAIAAAAeAAYAAAAPAAMAAAAeAAYAAAAPAAQAAAAeAAYAAAAPAAUAAAAeAAYAAAAPAAYAAAAeAAYAAAAPAAcAAAAeAAYAAAAPAAgAAAAeAAYAAAAAAAkAAAAeAAYAAAABAAkAAAAeAAYAAAACAAkAAAACAAkAAAADAAkAAAAeAAYAAAAEAAkAAAAeAAYAAAAFAAkAAAAeAAYAAAAAAAoAAAAeAAYAAAABAAoAAAAeAAYAAAACAAoAAAAeAAYAAAADAAoAAAAeAAYAAAAEAAoAAAAeAAYAAAAFAAoAAAAeAAYAAAAPAAkAAAAeAAYAAAAOAAkAAAAeAAYAAAANAAkAAAAeAAYAAAAMAAkAAAAeAAYAAAALAAkAAAAeAAYAAAAKAAkAAAAeAAYAAAAGAAkAAAAeAAYAAAAGAAoAAAAeAAYAAAABAAcAAAAeAAYAAAABAAIAAAAeAAYAAAABAAMAAAAeAAYAAAABAAQAAAAeAAYAAAABAAUAAAAeAAYAAAABAAYAAAAeAAYAAAABAAgAAAAeAAYAAAAOAAIAAAAeAAYAAAAOAAMAAAAeAAYAAAAOAAQAAAAeAAYAAAAOAAUAAAAeAAYAAAAOAAYAAAAeAAYAAAAOAAcAAAAeAAYAAAAOAAgAAAAeAAYAAAAKAAoAAAAeAAYAAAALAAoAAAAeAAYAAAAMAAoAAAAeAAYAAAANAAoAAAAeAAYAAAAOAAoAAAAeAAYAAAAPAAoAAAAeAAYAAAAJAAkAAAAeAAYAAAAJAAoAAAAeAAYAAAACAAIAAAAIAAsAAAACAAMAAAAIAAsAAAACAAQAAAAIAAsAAAACAAUAAAAIAAsAAAACAAYAAAAIAAsAAAACAAcAAAAIAAsAAAACAAgAAAAIAAsAAAADAAIAAAAIAAsAAAADAAMAAAAIAAsAAAADAAQAAAAIAAsAAAADAAUAAAAIAAsAAAADAAYAAAAIAAsAAAADAAcAAAAIAAsAAAADAAgAAAAIAAsAAAAEAAIAAAAIAAsAAAAEAAMAAAAIAAsAAAAEAAQAAAAIAAsAAAAEAAUAAAAIAAsAAAAEAAYAAAAIAAsAAAAEAAcAAAAIAAsAAAAEAAgAAAAIAAsAAAAFAAIAAAAIAAsAAAAFAAMAAAAIAAsAAAAFAAQAAAAIAAsAAAAFAAUAAAAIAAsAAAAFAAYAAAAIAAsAAAAFAAcAAAAIAAsAAAAFAAgAAAAIAAsAAAAGAAIAAAAIAAsAAAAGAAMAAAAIAAsAAAAGAAQAAAAIAAsAAAAGAAUAAAAIAAsAAAAGAAYAAAAIAAsAAAAGAAcAAAAIAAsAAAAGAAgAAAAIAAsAAAAHAAIAAAAIAAsAAAAHAAMAAAAIAAsAAAAHAAQAAAAIAAsAAAAHAAUAAAAIAAsAAAAHAAYAAAAIAAsAAAAHAAcAAAAIAAsAAAAHAAgAAAAIAAsAAAAIAAIAAAAIAAsAAAAIAAMAAAAIAAsAAAAIAAQAAAAIAAsAAAAIAAUAAAAIAAsAAAAIAAYAAAAIAAsAAAAIAAcAAAAIAAsAAAAIAAgAAAAIAAsAAAAJAAIAAAAIAAsAAAAJAAMAAAAIAAsAAAAJAAQAAAAIAAsAAAAJAAUAAAAIAAsAAAAJAAYAAAAIAAsAAAAJAAcAAAAIAAsAAAAJAAgAAAAIAAsAAAAKAAIAAAAIAAsAAAAKAAMAAAAIAAsAAAAKAAQAAAAIAAsAAAAKAAUAAAAIAAsAAAAKAAYAAAAIAAsAAAAKAAcAAAAIAAsAAAAKAAgAAAAIAAsAAAALAAIAAAAIAAsAAAALAAMAAAAIAAsAAAALAAQAAAAIAAsAAAALAAUAAAAIAAsAAAALAAYAAAAIAAsAAAALAAcAAAAIAAsAAAALAAgAAAAIAAsAAAAMAAIAAAAIAAsAAAAMAAMAAAAIAAsAAAAMAAQAAAAIAAsAAAAMAAUAAAAIAAsAAAAMAAYAAAAIAAsAAAAMAAcAAAAIAAsAAAAMAAgAAAAIAAsAAAANAAIAAAAIAAsAAAANAAMAAAAIAAsAAAANAAQAAAAIAAsAAAANAAUAAAAIAAsAAAANAAYAAAAIAAsAAAANAAcAAAAIAAsAAAANAAgAAAAIAAsAAAAHAAkAAAAIAAsAAAAHAAoAAAAIAAsAAAAIAAkAAAAIAAsAAAAIAAoAAAAIAAsAAAA=")

[node name="Entrance" parent="." instance=ExtResource("3_hbmht")]
position = Vector2(128, 160)
level = "res://Overworld/over_world_quest_1.tscn"
target_transition_area = "Cave-SwordB"
center_player = true
side = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 56)

[node name="Label" type="Label" parent="."]
offset_left = 37.0
offset_top = 32.0
offset_right = 215.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("4_nntlh")
text = "You may choose only one."
horizontal_alignment = 1
autowrap_mode = 2
visible_ratio = -0.0416667

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
"": SubResource("AnimationLibrary_j6cp2")
}
autoplay = "Show Text"

[node name="PlayerSpawn" parent="." instance=ExtResource("5_k707q")]
position = Vector2(129, 140)

[node name="OldMan" parent="." instance=ExtResource("13_a4tep")]
position = Vector2(128, 71)

[node name="Fire" parent="." instance=ExtResource("14_ctylk")]
position = Vector2(69, 71)

[node name="Fire2" parent="." instance=ExtResource("14_ctylk")]
position = Vector2(186, 72)

[node name="OnlyOne" type="Node" parent="."]
script = ExtResource("8_advpt")

[node name="ItemDropper1" parent="OnlyOne" instance=ExtResource("10_p2hh2")]
position = Vector2(104, 105)
item_data = ExtResource("10_5c3fk")
major_drop = true

[node name="ItemDropper2" parent="OnlyOne" instance=ExtResource("10_p2hh2")]
position = Vector2(152, 105)
item_data = ExtResource("12_2et6f")
major_drop = true

[node name="ItemChosen" type="Node" parent="OnlyOne"]
script = ExtResource("12_v6iyk")
